documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

P71W32API SCHNDX __stdcall PC708_BCSchedPulse0(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedPulse1(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRestart(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedReturn(HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSchedUser(ULONG useraddr,HCARD handleval);

P71W32API SCHNDX __stdcall PC708_BCSetEntry(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BCSetTimeout(USHORT timeoutval,HCARD handleval);

P71W32API ULONG __stdcall PC708_BlkAddr(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_BlkOptRd(INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

P71W32API ULONG __stdcall PC708_BlkPtrRd(INT taval,HCARD handleval);

P71W32API VOID __stdcall PC708_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkReset(INT taval,HCARD handleval);

P71W32API USHORT __stdcall PC708_BlkSWDRd(INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkWipe(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardBoot(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardCloseAll(VOID);

P71W32API ERRVAL __stdcall PC708_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

P71W32API ULONG __stdcall PC708_CardGetInfo(USHORT infotype,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

P71W32API VOID __stdcall PC708_CardInit(VOID);

P71W32API BOOL __stdcall PC708_CardIsRunning(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardNop(HCARD handleval);

P71W32API HCARD __stdcall PC708_CardOpenEx(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P71W32API HCARD __stdcall PC708_CardOpenExx(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P71W32API VOID __stdcall PC708_CardResetEx(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardResume(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardTest(USHORT level,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardTest0(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardTest1(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CardTest2(HCARD handleval);

P71W32API VOID __stdcall PC708_CardTrigger(HCARD handleval);

P71W32API ULONG __stdcall PC708_CmdAddr(SCHNDX index,HCARD handleval);

P71W32API ULONG __stdcall PC708_CmdAlloc(USHORT count,HCARD handleval);

P71W32API ULONG __stdcall PC708_CmdBaseRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdBaseWr(ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CmdClear(HCARD handleval);

P71W32API USHORT __stdcall PC708_CmdCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdCountWr(USHORT countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_CmdCtrlRd(SCHNDX index,HCARD handleval);

P71W32API VOID __stdcall PC708_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);

P71W32API USHORT __stdcall PC708_CmdCurrRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdCurrWr(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_CmdInit(USHORT opcode,LPUSHORT block);

P71W32API SCHNDX __stdcall PC708_CmdInsert(LPUSHORT block,HCARD handleval);

P71W32API USHORT __stdcall PC708_CmdMaxRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdMaxWr(USHORT count,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);

P71W32API VOID __stdcall PC708_CmdStackClr(HCARD handleval);

P71W32API USHORT __stdcall PC708_CmdStartRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdStartWr(USHORT addrval,HCARD handleval);

P71W32API INT __stdcall PC708_CmdTotalRd(HCARD handleval);

P71W32API VOID __stdcall PC708_CmdTotalWr(INT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommCall(ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommCheck(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommDisable(USHORT command,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommEnable(HCARD handleval);

P71W32API ULONG __stdcall PC708_CommRdL(ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

P71W32API USHORT __stdcall PC708_CommRdW(ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

P71W32API VOID __stdcall PC708_CommWrL(ULONG value,ULONG addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

P71W32API VOID __stdcall PC708_CommWrW(USHORT value,ULONG addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_DARClr(USHORT maskval,USHORT addrval,HCARD handleval);

P71W32API BOOL __stdcall PC708_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);

P71W32API ULONG __stdcall PC708_DARRdL(USHORT addrval,HCARD handleval);

P71W32API USHORT __stdcall PC708_DARRdW(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_DARWrL(ULONG value,USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_DARWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ULONG __stdcall PC708_Div(ULONG diva,ULONG divb);