documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.VB

    Public Declare Function PC708_BCSchedPulse0 Lib "P71W32.DLL" Alias "_PC708_BCSchedPulse0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedPulse1 Lib "P71W32.DLL" Alias "_PC708_BCSchedPulse1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedRestart Lib "P71W32.DLL" Alias "_PC708_BCSchedRestart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedRetry Lib "P71W32.DLL" Alias "_PC708_BCSchedRetry@12" (ByVal condition As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedRetryEx Lib "P71W32.DLL" Alias "_PC708_BCSchedRetryEx@24" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedReturn Lib "P71W32.DLL" Alias "_PC708_BCSchedReturn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSchedUser Lib "P71W32.DLL" Alias "_PC708_BCSchedUser@8" (ByVal useraddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSetEntry Lib "P71W32.DLL" Alias "_PC708_BCSetEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BCSetTimeout Lib "P71W32.DLL" Alias "_PC708_BCSetTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkAddr Lib "P71W32.DLL" Alias "_PC708_BlkAddr@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_BlkOptRd Lib "P71W32.DLL" Alias "_PC708_BlkOptRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_BlkOptWr Lib "P71W32.DLL" Alias "_PC708_BlkOptWr@12" (ByVal rtopt As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkPtrRd Lib "P71W32.DLL" Alias "_PC708_BlkPtrRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub PC708_BlkPtrWr Lib "P71W32.DLL" Alias "_PC708_BlkPtrWr@12" (ByVal descaddr As UInt32, ByVal taval As Int32, ByVal handleval As UInt32)
    Public Declare Function PC708_BlkRd Lib "P71W32.DLL" Alias "_PC708_BlkRd@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkReset Lib "P71W32.DLL" Alias "_PC708_BlkReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkSWDRd Lib "P71W32.DLL" Alias "_PC708_BlkSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_BlkSWDWr Lib "P71W32.DLL" Alias "_PC708_BlkSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkWipe Lib "P71W32.DLL" Alias "_PC708_BlkWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_BlkWr Lib "P71W32.DLL" Alias "_PC708_BlkWr@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardBoot Lib "P71W32.DLL" Alias "_PC708_CardBoot@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardCloseAll Lib "P71W32.DLL" Alias "_PC708_CardCloseAll@0" () As Int32
    Public Declare Function PC708_CardConfig Lib "P71W32.DLL" Alias "_PC708_CardConfig@16" (ByVal enableflag As Int32, ByVal command As UInt16, ByVal taval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardGetInfo Lib "P71W32.DLL" Alias "_PC708_CardGetInfo@8" (ByVal infotype As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_CardGetInfoEx Lib "P71W32.DLL" Alias "_PC708_CardGetInfoEx@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CardInit Lib "P71W32.DLL" Alias "_PC708_CardInit@0" ()
    Public Declare Function PC708_CardIsRunning Lib "P71W32.DLL" Alias "_PC708_CardIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardNop Lib "P71W32.DLL" Alias "_PC708_CardNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardOpenEx Lib "P71W32.DLL" Alias "_PC708_CardOpenEx@20" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16) As UInt32
    Public Declare Function PC708_CardOpenExx Lib "P71W32.DLL" Alias "_PC708_CardOpenExx@28" (ByRef cardname As String, ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Sub PC708_CardResetEx Lib "P71W32.DLL" Alias "_PC708_CardResetEx@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_CardResume Lib "P71W32.DLL" Alias "_PC708_CardResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardTest Lib "P71W32.DLL" Alias "_PC708_CardTest@8" (ByVal level As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardTest0 Lib "P71W32.DLL" Alias "_PC708_CardTest0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardTest1 Lib "P71W32.DLL" Alias "_PC708_CardTest1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CardTest2 Lib "P71W32.DLL" Alias "_PC708_CardTest2@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CardTrigger Lib "P71W32.DLL" Alias "_PC708_CardTrigger@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_CmdAddr Lib "P71W32.DLL" Alias "_PC708_CmdAddr@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_CmdAlloc Lib "P71W32.DLL" Alias "_PC708_CmdAlloc@8" (ByVal count As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_CmdBaseRd Lib "P71W32.DLL" Alias "_PC708_CmdBaseRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub PC708_CmdBaseWr Lib "P71W32.DLL" Alias "_PC708_CmdBaseWr@8" (ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdClear Lib "P71W32.DLL" Alias "_PC708_CmdClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CmdCountRd Lib "P71W32.DLL" Alias "_PC708_CmdCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_CmdCountWr Lib "P71W32.DLL" Alias "_PC708_CmdCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdCtrlRd Lib "P71W32.DLL" Alias "_PC708_CmdCtrlRd@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_CmdCtrlWr Lib "P71W32.DLL" Alias "_PC708_CmdCtrlWr@12" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdCurrRd Lib "P71W32.DLL" Alias "_PC708_CmdCurrRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_CmdCurrWr Lib "P71W32.DLL" Alias "_PC708_CmdCurrWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_CmdInit Lib "P71W32.DLL" Alias "_PC708_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function PC708_CmdInsert Lib "P71W32.DLL" Alias "_PC708_CmdInsert@8" (ByRef block As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CmdMaxRd Lib "P71W32.DLL" Alias "_PC708_CmdMaxRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_CmdMaxWr Lib "P71W32.DLL" Alias "_PC708_CmdMaxWr@8" (ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdRd Lib "P71W32.DLL" Alias "_PC708_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CmdSkipWr Lib "P71W32.DLL" Alias "_PC708_CmdSkipWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CmdStackClr Lib "P71W32.DLL" Alias "_PC708_CmdStackClr@4" (ByVal handleval As UInt32)
    Public Declare Function PC708_CmdStartRd Lib "P71W32.DLL" Alias "_PC708_CmdStartRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_CmdStartWr Lib "P71W32.DLL" Alias "_PC708_CmdStartWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdTotalRd Lib "P71W32.DLL" Alias "_PC708_CmdTotalRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CmdTotalWr Lib "P71W32.DLL" Alias "_PC708_CmdTotalWr@8" (ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function PC708_CmdWr Lib "P71W32.DLL" Alias "_PC708_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommCall Lib "P71W32.DLL" Alias "_PC708_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommCheck Lib "P71W32.DLL" Alias "_PC708_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommDisable Lib "P71W32.DLL" Alias "_PC708_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommEnable Lib "P71W32.DLL" Alias "_PC708_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommRdL Lib "P71W32.DLL" Alias "_PC708_CommRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_CommRdsW Lib "P71W32.DLL" Alias "_PC708_CommRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_CommRdW Lib "P71W32.DLL" Alias "_PC708_CommRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function PC708_CommRun Lib "P71W32.DLL" Alias "_PC708_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CommWrL Lib "P71W32.DLL" Alias "_PC708_CommWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function PC708_CommWrsW Lib "P71W32.DLL" Alias "_PC708_CommWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub PC708_CommWrW Lib "P71W32.DLL" Alias "_PC708_CommWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub PC708_DARClr Lib "P71W32.DLL" Alias "_PC708_DARClr@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_DARGet Lib "P71W32.DLL" Alias "_PC708_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function PC708_DARRdL Lib "P71W32.DLL" Alias "_PC708_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function PC708_DARRdW Lib "P71W32.DLL" Alias "_PC708_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub PC708_DARSet Lib "P71W32.DLL" Alias "_PC708_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_DARWrL Lib "P71W32.DLL" Alias "_PC708_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub PC708_DARWrW Lib "P71W32.DLL" Alias "_PC708_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function PC708_Div Lib "P71W32.DLL" Alias "_PC708_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
